name:                HaPy
version:             0.1.0.0
synopsis:            A FFI bridge between Haskell and Python
description:         Please see README.md
homepage:            https://github.com/KenetJervet/HaPy#readme
license:             BSD3
license-file:        LICENSE
author:              Yukio Usuzumi
maintainer:          anohigisavay@gmail.com
copyright:           2016 Yukio Usuzumi
category:            Development
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     HaPy
                     , HaPy.PyPy
  c-sources:           c/pypy.c
  install-includes:    PyPy.h
  include-dirs:        /usr/lib64/pypy/include
  extra-lib-dirs:      /usr/lib64/pypy
  extra-libraries:     pypy-c
  build-depends:       base >= 4.7 && < 5
                     , bytestring
                     , text
  default-language:    Haskell2010

executable HaPy-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , interpolate
                     , text
                     , HaPy
  default-language:    Haskell2010

test-suite HaPy-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , HaPy
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/KenetJervet/Hapy
